# emeraldtree

./: .gitignore  .hgignore  .travis.yml  CHANGES.rst  MANIFEST.in  PKG-INFO  README  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
emeraldtree/: ElementInclude.py  ElementPath.py  ElementTree.py  HTMLTreeBuilder.py  SimpleXMLWriter.py  TidyTools.py  html.py  tree.py
emeraldtree/tests/: test_ElementTree.py  test_HTMLTreeBuilder.py  test_html.py  test_tree.py
scripts/: sdist-sign  upload-pypi
src/emeraldtree/: ElementInclude.py  ElementPath.py  __init__.py  html.py  tree.py
src/emeraldtree/tests/: test_html.py  test_tree.py
